--- a/Part 1 - Maximum Likelihood/lab 1 - linear regression/maximum_likelihood_lab_1.Rmd
+++ b/Part 1 - Maximum Likelihood/lab 1 - linear regression/maximum_likelihood_lab_1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Lab: Linear Regression by Maximum Likelihood'
-author: "answer key"
+author: "< your name here >"
 date: "BIOHOPK 143H - Winter 2021"
 output: pdf_document
 ---
@@ -12,6 +12,9 @@ if (!require("tidyverse")) install.packages("tidyverse"); library(tidyverse)
 knitr::opts_chunk$set(fig.height = 4, fig.width = 6)
 ```
 
+# Learning Goal
+
+In this lab, we'll step through the process of fitting a linear regression model from scratch - by using a simple model as an example, we'll learn the basics of maximum likelihood estimation so that we can apply the approach to more complex models down the line. Everything we'll do in this lab can be done in a single line using the R function `lm`, but by peeking inside the black box, we can learn how to extend the approach when pre-packaged options aren't available.
 
 # Simulating and plotting data
 
@@ -43,30 +46,29 @@ b <- 2 ## slope
 sigma <- 1 ## error standard deviation
 ```
 
-
 Next, let's simulate data from a linear regression with these known parameters.
 
-  - We'll use the `runif` function, which generates random values from a uniform distribution, to generate random `x` values.
-  - We'll use the `rnorm` function to generate the errors, which is built into base R and generates random observations from a normal distribution.
-  - We'll store these values in a `tibble`, which is a special type of data frame, for easy plotting with the `ggplot2` package.
+-   We'll use the `runif` function, which generates random values from a uniform distribution, to generate random `x` values.
+-   We'll use the `rnorm` function to generate the errors, which is built into base R and generates random observations from a normal distribution.
+-   We'll store these values in a `tibble`, which is a special type of data frame, for easy plotting with the `ggplot2` package.
 
 ```{r sim_data}
 n <- 50 ## sample size
 
 ## simulate data
 sim_data <- data.frame(x = runif(n, min = -3, max = 3))
-sim_data$y <- a + b*sim_data$x + rnorm(n, mean = 0, sd = sigma)
+sim_data$y <- rnorm(n, mean = a + b*sim_data$x, sd = sigma)
 
 ## Look at the data structure
 head(sim_data)
 ```
 
-Next, let's plot this data. A few things to know about plotting with `ggplot2` in R: 
+Next, let's plot this data. A few things to know about plotting with `ggplot2` in R:
 
-  - Always start with a **data frame**, which is "piped" (`%>%`) to the `ggplot` function
-  - Specify things that depend on the data (the **aesthetics**), such as the `x` and `y` values by passing these values wrapped in `aes()` as the first argument to the `ggplot` function
-  - Add **geometries**, such as points, bar charts, and error bars, using `geom_` functions (`geom_point`, `geom_bar`, `geom_errorbar`, etc.).
-  
+-   Always start with a **data frame**, which is "piped" (`%>%`) to the `ggplot` function
+-   Specify things that depend on the data (the **aesthetics**), such as the `x` and `y` values by passing these values wrapped in `aes()` as the first argument to the `ggplot` function
+-   Add **geometries**, such as points, bar charts, and error bars, using `geom_` functions (`geom_point`, `geom_bar`, `geom_errorbar`, etc.).
+
 ```{r plot_data}
 sim_data %>% # start with the data
   ggplot(aes(x, y)) + # tell ggplot which aesthetics to use
@@ -76,7 +78,7 @@ sim_data %>% # start with the data
 
 # Finding the best-fit line
 
-To find the best fit line, we want to maximize the **likelihood function**, which is the product of the probability density of each of our data points, assuming a distribution (in this case, the Normal distribution) and parameter values for that distribution $\theta$ (in this case, $\theta = \{ \alpha, \beta, \sigma\}$): 
+To find the best fit line, we want to maximize the **likelihood function**, which is the product of the probability density of each of our data points, assuming a distribution (in this case, the Normal distribution) and parameter values for that distribution $\theta$ (in this case, $\theta = \{ \alpha, \beta, \sigma\}$):
 
 $$
 \mathcal{L}(\theta) = f_X(x|\theta) = \prod_{i = 1}^n f_X(x_i )
@@ -88,10 +90,9 @@ $$
 l(\theta) = \ln (\mathcal{L}(\theta)) = \sum_{i = 1}^n \ln [f_X(x_i)]
 $$
 
-It's also equivalent to **minimizing the negative log-likelihood**, which is what we'll do here. 
+It's also equivalent to **minimizing the negative log-likelihood**, which is what we'll do here.
 
-To do this, we need to express the log-likelihood of the **y values** in R as a function of the parameters. We can switch around some terms in the regression equation above to help with this, so that: 
-
+To do this, we need to express the log-likelihood of the **y values** in R as a function of the parameters. We can switch around some terms in the regression equation above to help with this, so that:
 
 $$
 \begin{aligned}
@@ -100,40 +101,36 @@ Y &= \alpha + \beta X + \epsilon \\
 \end{aligned}
 $$
 
-becomes: 
+becomes:
 
 $$
 Y \sim \text{Normal}(\underbrace{\alpha + \beta X}_{\text{mean}}, \underbrace{\sigma^2}_{\text{variance}})
 $$
 
-So, given our parameters $\alpha$, $\beta$, and $\sigma$, the likelihood of our y-values is given by summing the log density of each of our y-values under a Normal distribution with mean $\alpha + \beta X$ and standard deviation $\sigma$. 
+So, given our parameters $\alpha$, $\beta$, and $\sigma$, the likelihood of our y-values is given by summing the log density of each of our y-values under a Normal distribution with mean $\alpha + \beta X$ and standard deviation $\sigma$.
 
-Luckily, the Normal density function is already coded into `R` as the `dnorm` function, so we'll write a function for the negative log-likelihood using that. We can express the log-likelihood function very simply in R as:
+Luckily, the Normal density function is already coded into `R` as the `dnorm` function, so we'll write a function for the negative log-likelihood using that. We can express the negative log-likelihood function very simply in R as:
 
-```{}
+```         
 -sum(dnorm(y, mean = ..., sd = ..., log = TRUE))
 ```
 
-Where we'll provide `a + b*x` for the `mean`, and `sigma` for the `sd`. Since the standard deviation, $\sigma$, can't be negative, we'll return a very high value for any negative values of sigma:
+Where we'll provide `a + b*x` for the `mean`, and `sigma` for the `sd`. Since the standard deviation, $\sigma$, must be positive, we'll estimate it on the log scale. The `optim` function expects all of our parameters to be passed to our objective function (i.e., the negative log likelihood) as a single argument, so we'll pass them as a vector argument called `par` and unpack them in the likelihood function:
 
 ```{r lm_log_lik}
 ## negative log-likelihood of y-values given intercept, slope, and error sd
 ## we pass the parameters as a vector in the order a, b, sigma
-lm_log_lik <- function(pars, x, y) {
-  a <- pars[1]; b <- pars[2]; sigma <- pars[3]
-  if (sigma > 0) {
-    return(-sum(dnorm(y, mean = a + b*x, sd = sigma, log = TRUE)))
-  } else {
-    return(1000)
-  }
+lm_log_lik <- function(par, x, y) {
+  a <- par["a"]; b <- par["b"]; sigma <- exp(par["log_sigma"])
+  -sum(dnorm(y, mean = a + b*x, sd = sigma, log = TRUE))
 }
 ```
 
-Now, let's pass the `lm_log_lik` function to the `optim` function to get out a list of parameter values which minimize the negative log likelihood, and are therefore the most probable values given the data we've observed: 
+Now, let's pass the `lm_log_lik` function to the `optim` function to get out a list of parameter values which minimize the negative log likelihood, and are therefore the most probable values given the data we've observed:
 
 ```{r MLE}
 fit <- optim(
-  par = c(a = 0, b = 0, sigma = 1), 
+  par = c(a = 0, b = 0, log_sigma = 0), 
   fn = lm_log_lik, 
   x = sim_data$x, 
   y = sim_data$y, 
@@ -157,8 +154,8 @@ Let's compare our estimates with the known values of the intercept and slope by 
 sim_data %>%   
   ggplot(aes(x, y)) + # tell ggplot which aesthetics to use
   geom_point() + # add points
-  geom_abline(intercept = a, slope = b, color = "red") + # show the known regression line
-  geom_abline(intercept = fit$par[1], slope = fit$par[2], color = "blue") # our estimates
+  geom_abline(intercept = a, slope = b, color = "red") + # true regression line
+  geom_abline(intercept = fit$par[1], slope = fit$par[2], color = "blue") # fit
 ```
 
 # Likelihood surfaces and profiles
@@ -177,7 +174,7 @@ par_grid <- expand.grid("a" = a_seq, "b" = b_seq)
 ### loop over data frame, store negative log likelihood
 for (i in 1:nrow(par_grid)) {
   par_grid$loglik[i] <- lm_log_lik(
-    c(a = par_grid$a[i], b = par_grid$b[i], sigma = fit$par[3]), 
+    c(a = par_grid$a[i], b = par_grid$b[i], fit$par[3]), 
     x = sim_data$x, 
     y = sim_data$y
   )
@@ -235,17 +232,17 @@ b_profile %>%
   labs(x = expression(beta), y = "negative log-likelihood")
 ```
 
-In a more complex model, we could repeat this procedure for each of the parameters in our model - if we had more than a few, we'd probably want to write a function or loop to do so. The `bblme` and `stats4` packages also provide some useful functions to do this. 
+In a more complex model, we could repeat this procedure for each of the parameters in our model - if we had more than a few, we'd probably want to write a function or loop to do so. The `bblme` and `stats4` packages also provide some useful functions to do this.
 
 # Standard Errors
 
 So, we have the maximum-likelihood estimate for our intercept and slope, but what if we want to estimate the uncertainty in these parameters - e.g., their standard error and confidence intervals? We can actually do this using the likelihood profiles that we've just computed, but it can be tedious and inefficient when we have more than a couple parameters. We have a few more options:
 
-  - Derive the standard deviation of the parameters analytically (recall that the standard error is the standard deviation of an estimate, such as the intercept and slope) - this is straightforward for the intercept and slope of linear regression, but can be intractable for more complex models, so we won't cover it.
+-   Derive the standard deviation of the parameters analytically (recall that the standard error is the standard deviation of an estimate, such as the intercept and slope) - this is straightforward for the intercept and slope of linear regression, but can be intractable for more complex models, so we won't cover it.
 
-  - Use the observed Fisher information, which relates the standard deviation of the parameters to the curvature of the likelihood function around the estimates. Likelihood functions that are more curved, and therefore "sharper" around the estimate, indicate greater certainty in the estimate and therefore a smaller standard deviation. To generate confidence intervals, we assume the parameters are normally distributed, where the mean is our maximum-likelihood estimate and the SD is calculated using Fisher information.
+-   Use the observed Fisher information, which relates the standard deviation of the parameters to the curvature of the likelihood function around the estimates. Likelihood functions that are more curved, and therefore "sharper" around the estimate, indicate greater certainty in the estimate and therefore a smaller standard deviation. To generate confidence intervals, we assume the parameters are normally distributed, where the mean is our maximum-likelihood estimate and the SD is calculated using Fisher information.
 
-  - Bootstrap the estimates by resampling with replacement from the original data and re-obtaining estimates for the intercept and slope. This is more computationally intensive than using the observed Fisher information, but can be used to approximate the distribution of our parameters without assuming they are normally distributed. Additionally, we can use the bootstrap when we're fitting parameters by something other than maximum-likelihood - like, for example, least squares (see the lab exercises).
+-   Bootstrap the estimates by resampling with replacement from the original data and re-obtaining estimates for the intercept and slope. This is more computationally intensive than using the observed Fisher information, but can be used to approximate the distribution of our parameters without assuming they are normally distributed. Additionally, we can use the bootstrap when we're fitting parameters by something other than maximum-likelihood - like, for example, least squares (see the lab exercises).
 
 Here, we'll estimate the standard deviation of the parameters using both the observed Fisher information and bootstrapping.
 
@@ -253,7 +250,7 @@ Here, we'll estimate the standard deviation of the parameters using both the obs
 
 When we obtained our maximum-likelihood estimates above, we asked the `optim` function to return the Hessian matrix (`hessian = TRUE`). The Hessian is the matrix of the second-order partial derivatives, and in this case, it's the matrix of the second-order partial derivates of the negative log-likelihood function with respect to our parameters. It measures the curvature of our likelihood function around the maximum-likelihood estimates, and with it we can estimate the uncertainty in the maximum-likelihood estimates themselves.
 
-The variance in our parameter estimates is approximately equal to the inverse of the observed fisher information matrix: 
+The variance in our parameter estimates is approximately equal to the inverse of the observed fisher information matrix:
 
 $$
 \begin{aligned}
@@ -284,7 +281,7 @@ summary(lm(y ~ x, data = sim_data))
 
 ## Bootstrapping
 
-Bootstrapping is a simple but powerful technique, which relies on the assumption that the data themselves are representative of the population that we're sampling from, and that we can therefore resample from the data (with replacement) to obtain a new, and unique, representative sample. By estimating the properties of each of our bootstrap samples, we can gauge the variation in the larger population. 
+Bootstrapping is a simple but powerful technique, which relies on the assumption that the data themselves are representative of the population that we're sampling from, and that we can therefore resample from the data (with replacement) to obtain a new, and unique, representative sample. By estimating the properties of each of our bootstrap samples, we can gauge the variation in the larger population.
 
 Bootstrapping works best when the number of samples we have is relatively large, and when we can resample from the data many times - this later condition is only a matter of compute time.
 
@@ -303,7 +300,7 @@ for (i in 1:n_samples) {
   new_data <- sim_data[sample_rows,] # subset data to sampled rows
   
   sample_fit <- optim(
-    par = c(0, 0, 1), # initial values
+    par = c(a = 0, b = 0, log_sigma = 0), # initial values
     fn = lm_log_lik, # log likelihood function
     x = new_data$x, # sampled x-values
     y = new_data$y # sampled y-values
@@ -313,7 +310,7 @@ for (i in 1:n_samples) {
 }
 
 boot_se <- apply(par_samples, MARGIN = 2, FUN = sd) # calculate column SDs
-boot_se
+setNames(boot_se, names(fit$par))
 ```
 
 As expected, these standard deviations look pretty similar to our estimates based on Fisher information.
@@ -328,14 +325,15 @@ $$
 \text{CI} = (\hat{\theta} - \phi^{-1}(\gamma / 2) \times \text{SE}(\hat{\theta}), \; \hat{\theta} + \phi^{-1}(1 - \gamma / 2) \times \text{SE}(\hat{\theta}))
 $$
 
-Where $\phi^{-1}$ is the inverse cumulative distribution function of the standard Normal distribution. Equivalently: 
+Where $\phi^{-1}$ is the inverse cumulative distribution function of the standard Normal distribution (a normal distribution with $\mu = 0$ and $\sigma = 1$). Equivalently:
 
 $$
 \text{CI} = (\phi^{-1}_{\hat{\theta}, \text{SE}(\theta)}(\gamma / 2), \; \phi^{-1}_{\hat{\theta}, \text{SE}(\theta)} (1-\gamma/2))
-$$
-Where $\phi^{-1}_{\hat{\theta}, \text{SE}(\theta)}$ is the inverse cumulative distribution function for a Normal distribution with mean $\hat{\theta}$ and standard deviation $\text{SE}(\theta)$. 
+$$ 
 
-The Normal inverse CDF is returned by the `qnorm` function. We can obtain a confidence interval for our intercept $\alpha$ and slope $\beta$: 
+Where $\phi^{-1}_{\hat{\theta}, \text{SE}(\theta)}$ is the inverse cumulative distribution function for a Normal distribution with mean $\hat{\theta}$ and standard deviation $\text{SE}(\theta)$
+
+The Normal inverse CDF is returned by the `qnorm` function. We can obtain a confidence interval for our intercept $\alpha$ and slope $\beta$:
 
 ```{r normal_CI_fisher}
 gamma <- 0.05 ## 95% confidence interval
@@ -368,14 +366,14 @@ cbind(alpha_CI, beta_CI)
 
 # Making it a function
 
-Just for fun, let's go ahead and toss all the things we've learned into a function that returns estimated parameter values for the intercept and slope. We can then apply this function to any new dataset of our choosing, just like the `lm` function built into base R. 
+Just for fun, let's go ahead and toss all the things we've learned into a function that returns estimated parameter values for the intercept and slope. We can then apply this function to any new dataset of our choosing, just like the `lm` function built into base R.
 
 You'll also find that building things into functions makes them easier to read and reuse, and if you want to apply the same model to mulitple datasets or share the code so others can do so on theirs, having your code built into a function is very useful!
 
 Here's the code for the function - there aren't really any new elements here, we've just taken the old elements and put them together.
 
 ```{r lm_function}
-lm_fit <- function(x, y, SE = "fisher", init = c("a" = 0, "b" = 0, "sigma" = 1), n_boot = 1000) {
+lm_fit <- function(x, y, SE = "fisher", init = c("a" = 0, "b" = 0, "log_sigma" = 0), n_boot = 1000) {
 
   if (!(SE %in% c("bootstrap", "fisher"))) stop("SE options are bootstrap or fisher")
   if (length(x) != length(y)) stop("x and y lengths differ")
@@ -435,8 +433,6 @@ Now, play around with simulating new data - can you recover the parameters that 
 
 The code to simulate new data is reproduced for you below. Try varying the sample size and the parameters - and make sure to plot the x and y variables against each other first!
 
-> **As we increase the sample size, the estimates do not change in any predictable way, but the variation in estimates across simulations does decrease - estimates are, on average, closer to the true value when we've simulated many observations. The standard error decreases as we increase the sample size - with more data, we are more certain about our maximum likelihood estimates.**
-
 ```{r}
 a <- 1 ## intercept
 b <- 2 ## slope
@@ -446,7 +442,7 @@ n <- 50 ## sample size
 ## simulate data
 sim_data <- tibble(
   x = runif(n, min = -3, max = 3), ## x values
-  y = a + b*x + rnorm(n, mean = 0, sd = sigma) ## regression equation
+  y = rnorm(n, mean = a + b*x, sd = sigma) ## regression equation
 )
 
 ## plot data
@@ -460,60 +456,46 @@ lm_fit(sim_data$x, sim_data$y, SE = "fisher")
 
 Try out our regression function on some of the other datasets built into R - try, for example, building regressions using the variables in the `mtcars` or `iris` datasets. You can view all the datasets you have available by running the `data()` function.
 
-```{r message = FALSE}
-mtcars %>% ggplot(aes(hp, mpg)) + geom_point() + geom_smooth(method = "lm")
-```
-
 ```{r}
-with(mtcars, lm_fit(hp, mpg))
+## YOUR CODE HERE
 ```
-
 
 ## 3. Likelihood-ratio tests
 
 While our linear regresion function is great, you've probably noticed a couple things that it's missing which R's `lm` function has - notably, our function doesn't spit out any p-values. The p-values that the `lm` function returns for the intercept and slope are testing the null hypothesis that intercept and slope are 0 - we can test the same null hypothesis, and many other ones that we might be interested in, using the likelihood function.
 
-Although the `lm` function uses the t distribution to calculate p-values, we're going to use **likelihood-ratio tests**. Likelihood ratio tests are great because we can use them to test a flexible variety of null hypothesis - maybe our null expectation for the slope is 2, or maybe we want to test the joint null hypothesis that **both** the intercept and slope are zero. Maybe we're fitting a logistic population growth model, and we want to test whether the intrinsic growth rate $r$ is significantly different from 0.05 or some other hypothesized value - all of these are things we can evaluate with a likelihood ratio test. 
+Although the `lm` function uses the t distribution to calculate p-values, we're going to use **likelihood-ratio tests**. Likelihood ratio tests are great because we can use them to test a flexible variety of null hypothesis - maybe our null expectation for the slope is 2, or maybe we want to test the joint null hypothesis that **both** the intercept and slope are zero. Maybe we're fitting a logistic population growth model, and we want to test whether the intrinsic growth rate $r$ is significantly different from 0.05 or some other hypothesized value - all of these are things we can evaluate with a likelihood ratio test.
 
 We won't go into the theoretical/mathematical justification for the likelihood ratio test, but here's how to do it:
 
-  1. Fit the model, allowing all parameters to vary, and extract the negative log-likelihood at the maximum-likelihood estimate. We'll call this the **full model**.
-  
-  2. Now, fit the model again, but fix (hold constant) one or more of the parameters to a null value. We'll call this the **reduced model**.
-  
-  3. Compute the $\chi^2$ ("Chi-square") test statistic: $2 (- \ln \mathcal{L}_\text{reduced} - (- \ln \mathcal{L}_\text{full}))$ - i.e. 2 times the difference in negative log-likelihoods between the reduced and full models.
-  
-  4. Calculate the probability of observing a test statistic as or more extreme than the above value assuming a Chi-square distribution with degrees of freedom equal to the number of fixed parameters (in R, this is the `pchisq` function with the argument `lower.tail = FALSE`).
+1.  Fit the model, allowing all parameters to vary, and extract the negative log-likelihood at the maximum-likelihood estimate. We'll call this the **full model**.
+
+2.  Now, fit the model again, but fix (hold constant) one or more of the parameters to a null value. We'll call this the **reduced model**.
+
+3.  Compute the $\chi^2$ ("Chi-square") test statistic: $2 (- \ln \mathcal{L}_\text{reduced} - (- \ln \mathcal{L}_\text{full}))$ - i.e. 2 times the difference in negative log-likelihoods between the reduced and full models.
+
+4.  Calculate the probability of observing a test statistic as or more extreme than the above value assuming a Chi-square distribution with degrees of freedom equal to the number of fixed parameters (in R, this is the `pchisq` function with the argument `lower.tail = FALSE`).
 
 Do this below and calculate a p-value for the null hypothesis that the slope is 0 (representing no relationship between y and x) using the `anscombe$x1` and `anscombe$y1` variables. Compare the p-value you get here from the one the `lm` function returns. If you use the `slope_proflik` function we defined earlier in obtaining your reduced negative log-likelihood, explain why this works (but this isn't the only way!).
 
-> **Here, I used the `slope_proflik` function we defined earlier for creating a likelihood profile to obtain the negative log-likelihood for the "reduced" model - this works because this function does exactly what we outlined in step 2 of the likelihood ratio test procedure - it fits the model, holding a paramter (the slope) constant. The likelihood ratio test p-value is extremely small, so there's significant evidence (under a threshold significance level of $\alpha = 0.05$) that the slope of the relationship between `x1` and `y1` in the `anscombe` dataset is different than zero. While the p-value that `lm` returns is a little higher, both are quite small.**
-
 ```{r}
 ### full negative log-likelihood
-full <- optim(par = c(0, 0, 1), fn = lm_log_lik, x = anscombe$x1, y = anscombe$y1)
+full <- optim(par = c(a = 0, b = 0, log_sigma = 0), fn = lm_log_lik, x = anscombe$x1, y = anscombe$y1)
 full <- full$value
 
 ### reduced negative log-likelihood
-reduced <- optim(par = c(0, 1), fn = slope_proflik, b = 0, x = anscombe$x1, y = anscombe$y1)
-reduced <- reduced$value
+## YOUR CODE HERE
 
 ### calculate test statistic
-chisq <- 2 * (reduced - full)
+## YOUR CODE HERE
 
-### likelihood ratio test p-value
-p_LRT <- pchisq(chisq, df = 1, lower.tail = FALSE)
-
-### p-value from lm
-p_lm <- anova(lm(y1 ~ x1, data = anscombe))$`Pr(>F)`[1]
-  
-paste("likelihood ratio p-value:", round(p_LRT, 4))
-paste("lm p-value:", round(p_lm, 4))
+### p-value
+## YOUR CODE HERE
 ```
 
 ## 4. Non-parametric estimation
 
-In all of the above exercises, we've been using maximum-likelihood estimation, which always requires assuming a generative probability distribution for the data (in the case of linear regression, a Normal distribution). We also tried two methods for estimating the standard error of our parameters - one parametric (the Fisher information) and another non-parametric (bootstrapping). 
+In all of the above exercises, we've been using maximum-likelihood estimation, which always requires assuming a generative probability distribution for the data (in the case of linear regression, a Normal distribution). We also tried two methods for estimating the standard error of our parameters - one parametric (the Fisher information) and another non-parametric (bootstrapping).
 
 We can also obtain parameter estimates without assuming a probability distribution, however, and obtain standard error estimates with bootstrapping (Fisher information only works when we have a likelihood function). All we have to do is change the **objective function** that we'd like to minimize from the likelihood function to something else - the **sum of squared errors** is a very popular option:
 
@@ -523,15 +505,13 @@ $$
 
 In the case of linear regression, $f(x_i) = \alpha + \beta x_i$. Modify the `lm_log_lik` function we wrote earlier to return the sum of squares for a given intercept and slope, and find the values of the intercept and slope that minimize it (the "**least squares**" estimate). Compare these to the estimates obtained by maximum likelihood - what do you notice?
 
-> **The least squares estimate is nearly identical to the maximum likelihood estimate. In general, this will not be the case, *except* when we use a normal likelihood function - it turns out that if we assume a normal distribution for the response, maximum likelihood and least squares will provide the same parameter estimates.**
-
 ```{r}
 ### WRITE THE SUM OF SQUARES FUNCTION -------------------------------------
 ## sum of squared errors given intercept and slope
 ## pass the parameters as a vector c(a, b)
 sum_sqrs <- function(pars, x, y) {
-  a <- pars[1]; b <- pars[2]
-  sum((y - (a + b * x))^2)
+  a <- pars["a"]; b <- pars["b"]
+  ## YOUR CODE HERE
 }
 
 ### SIMULATE DATA ---------------------------------------------------------
@@ -544,12 +524,12 @@ n <- 50 ## sample size
 ## simulate data
 sim_data <- tibble(
   x = runif(n, min = -3, max = 3), ## x values
-  y = a + b*x + rnorm(n, mean = 0, sd = sigma) ## regression equation
+  y = rnorm(n, mean = a + b*x, sd = sigma) ## regression equation
 )
 
 ### OBTAIN PARAMETER ESTIMATES USING SUM OF SQUARES -----------------------
 ss_fit <- optim(
-  par = c(0, 0), # initial values (a, b)
+  par = c(a = 0, b = 0), # initial values (a, b)
   fn = sum_sqrs,  # sum of squares function
   x = sim_data$x,   # x values
   y = sim_data$y   # y values
@@ -561,7 +541,7 @@ ss_fit
 ```{r}
 ### OBTAIN PARAMETER ESTIMATES USING MAXIMUM LIKELIHOOD -------------------
 ml_fit <- optim(
-  par = c(0, 0, 1), # initial values (a, b, sigma)
+  par = c(a = 0, b = 0, log_sigma = 0), # initial values (a, b, sigma)
   fn = lm_log_lik,  # negative log-likelihood function
   x = sim_data$x,   # x values
   y = sim_data$y   # y values
